# Agent_langchain_Ollama_RAG

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: .env  app.py  main.py  order_tool.py  vector.py
src/chrome_langchain_db/: chroma.sqlite3
