[project]
name = "local-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.0",
    "streamlit>=1.28.0",
]
